This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Missing strdup() under MS Windows CE
Type: compile error Stage:
Components: Interpreter Core Versions: Python 2.7
process
Status: closed Resolution: accepted
Dependencies: Superseder:
Assigned To: Nosy List: eckhardt, loewis
Priority: normal Keywords: patch

Created on 2009-01-09 14:15 by eckhardt, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
python-2.7-wince-strdup.0.patch eckhardt, 2009-01-09 14:15
Messages (2)
msg79469 - (view) Author: Ulrich Eckhardt (eckhardt) Date: 2009-01-09 14:15
CE6 doesn't provide strdup() but provides an equivalent _strdup() in
stdlib.h. The attached patch simply #defines strdup _strdup after
including said header file.
msg79594 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-01-11 09:45
Thanks for the patch. Committed as r68527, r68528.
History
Date User Action Args
2022-04-11 14:56:43adminsetgithub: 49145
2009-01-11 09:45:48loewissetstatus: open -> closed
resolution: accepted
messages: + msg79594
nosy: + loewis
2009-01-09 14:15:03eckhardtcreate